--- a/supportcompactlibrary/src/main/res/values/dimens.xml
+++ b/supportcompactlibrary/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
 
     <!--spaces-->
     <dimen name="default_space">16dp</dimen>
+    <dimen name="space_0">0dp</dimen>
     <dimen name="space_1">1dp</dimen>
     <dimen name="space_2">2dp</dimen>
     <dimen name="space_3">3dp</dimen>
@@ -17,6 +18,7 @@
     <dimen name="space_10">10dp</dimen>
     <dimen name="space_15">15dp</dimen>
     <dimen name="space_16">16dp</dimen>
+    <dimen name="space_18">18dp</dimen>
     <dimen name="space_20">20dp</dimen>
     <dimen name="space_25">25dp</dimen>
     <dimen name="space_30">30dp</dimen>
