--- a/app/src/main/res/layout/row_risk_assessment_radio_emoji_item.xml
+++ b/app/src/main/res/layout/row_risk_assessment_radio_emoji_item.xml
@@ -5,10 +5,6 @@
 
     <data>
 
-        <variable
-            name="optionTitle"
-            type="String" />
-
         <import type="android.view.View" />
 
         <variable
@@ -16,30 +12,29 @@
             type="com.tarrakki.api.model.RiskAssessmentQuestionsApiResponse.Data.Option" />
     </data>
 
-    <RelativeLayout
+    <LinearLayout
+        android:padding="@dimen/_8sdp"
         android:background="@{item.isSelected?@drawable/shape_rounded_bg_green:@drawable/shape_border_rounded_black}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:background="@{item.isSelected?@drawable/shape_bottom_radius_green:@drawable/shape_bottom_radius_black}"
-            android:layout_alignParentStart="true"
-            android:padding="4dp"
-            android:gravity="center"
-            android:layout_alignParentTop="true"
-            android:text="@{optionTitle}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:layout_width="26dp"
-            android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/ivItem"
+            imgUrl="@{item.optionImage}"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:adjustViewBounds="true"
+            tools:src="@drawable/emergency_fund" />
 
         <TextView
-            android:paddingEnd="16dp"
-            android:paddingBottom="16dp"
-            android:paddingTop="16dp"
-            android:paddingStart="36dp"
+            android:paddingEnd="@dimen/_8sdp"
+            android:paddingBottom="@dimen/_8sdp"
+            android:paddingTop="@dimen/_8sdp"
+            android:paddingStart="@dimen/_20sdp"
             android:id="@+id/tvTitle"
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:elevation="2dp"
             android:text="@{item.optionValue}"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
@@ -47,6 +42,6 @@
             tools:text="15000 - 30000"
             tools:textColor="@color/black" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </layout>
