--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="vm"
             type="com.tarrakki.module.funddetails.FundDetailsVM" />
@@ -205,7 +207,8 @@
                 android:layout_marginEnd="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
-                android:padding="8dp">
+                android:padding="8dp"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/tvRiskLevelL"
@@ -250,13 +253,13 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:layout_height="@dimen/_200sdp"
                 android:layout_marginStart="@dimen/default_space"
                 android:layout_marginTop="@dimen/default_space"
                 android:layout_marginEnd="@dimen/default_space"
                 android:background="@drawable/shape_cart_view"
                 android:elevation="@dimen/space_2"
-                android:padding="8dp">
+                android:padding="8dp"
+                tools:layout_height="@dimen/_200sdp">
 
                 <TextView
                     android:id="@+id/tvTitle"
@@ -294,6 +297,132 @@
                     app:sv_speedTextPosition="CENTER"
                     app:sv_startDegree="180"
                     app:sv_textSize="@dimen/_18ssp" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_space"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
+                android:background="@drawable/shape_cart_view"
+                android:elevation="@dimen/space_2"
+                android:padding="8dp"
+                android:visibility="@{vm.hasRiskProfile?View.VISIBLE:View.GONE}"
+                tools:layout_height="@dimen/_200sdp">
+
+                <TextView
+                    android:id="@+id/tvTitle1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/your_risk_profile"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@android:color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageView
+                    android:id="@+id/ivRiskLbl1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_risk_miter_bg_lbl"
+                    app:layout_constraintTop_toBottomOf="@id/tvTitle1" />
+
+                <com.tarrakki.speedometer.SpeedView
+                    android:id="@+id/speedView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_16sdp"
+                    android:layout_marginTop="@dimen/_16sdp"
+                    android:layout_marginEnd="@dimen/_16sdp"
+                    app:layout_constraintTop_toTopOf="@id/ivRiskLbl1"
+                    app:riskLevel="@{vm.riskScore}"
+                    app:sv_centerCircleColor="@color/white"
+                    app:sv_endDegree="360"
+                    app:sv_speedTextPadding="@dimen/_18ssp"
+                    app:sv_speedTextPosition="CENTER"
+                    app:sv_startDegree="180"
+                    app:sv_textSize="@dimen/_18ssp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/low"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintStart_toStartOf="@id/speedView1"
+                    app:layout_constraintTop_toBottomOf="@id/speedView1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/high"
+                    android:textColor="@color/semi_black"
+                    app:layout_constraintEnd_toEndOf="@id/speedView1"
+                    app:layout_constraintTop_toBottomOf="@id/speedView1" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_space"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/default_space"
+                android:background="@drawable/bg_complete_verification"
+                android:elevation="@dimen/space_2"
+                android:padding="8dp"
+                android:visibility="@{vm.hasRiskProfile?View.GONE:View.VISIBLE}">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/ivProfile"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:src="@drawable/ic_your_risk_profile"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_goneMarginTop="@dimen/space_8" />
+
+                <androidx.constraintlayout.widget.Barrier
+                    android:id="@+id/barrier4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:barrierDirection="end"
+                    app:constraint_referenced_ids="ivProfile"
+                    app:layout_constraintStart_toEndOf="@id/ivProfile" />
+
+                <TextView
+                    android:id="@+id/tvTitle2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_8sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/complete_your_free_assessment_and_know_your_risk_profile_now"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/white"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/barrier4" />
+
+                <Button
+                    android:id="@+id/btnRiskAssessment"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/_32sdp"
+                    android:layout_marginStart="@dimen/_6sdp"
+                    android:layout_marginTop="@dimen/_4sdp"
+                    android:background="@drawable/shape_btn_idle_bg"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="@string/complete_risk_assessment"
+                    android:textColor="@color/white"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/barrier4"
+                    app:layout_constraintTop_toBottomOf="@id/tvTitle2" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
