--- a/app/src/main/res/layout/fragment_assessment_declaration.xml
+++ b/app/src/main/res/layout/fragment_assessment_declaration.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -9,7 +9,6 @@
             name="vm"
             type="com.tarrakki.module.risk_assessment_agree.AssessmentDeclarationVM" />
     </data>
-
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -24,30 +23,30 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:background="@drawable/shape_cart_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:gravity="center_horizontal"
+                android:background="@drawable/shape_cart_view"
                 android:elevation="2dp"
-                android:padding="@dimen/_8sdp"
-                android:orientation="vertical">
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="@dimen/_8sdp">
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="72dp"
                     android:layout_height="72dp"
+                    android:layout_marginTop="@dimen/space_8"
                     android:elevation="12dp"
                     app:cardBackgroundColor="@color/circular_bg"
-                    app:cardCornerRadius="36dp"
-                    android:layout_marginTop="@dimen/space_8">
+                    app:cardCornerRadius="36dp">
 
                     <ImageView
                         android:id="@+id/ivProfile"
-                        android:src="@drawable/icon_nach"
-                        android:layout_gravity="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_gravity="center"
                         android:padding="@dimen/default_space"
+                        android:src="@drawable/icon_nach"
                         tools:src="@drawable/ic_upload" />
 
                 </androidx.cardview.widget.CardView>
@@ -56,7 +55,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/space_12"
-                    android:text="I confirm that I have conducted my risk profiling and I am aware about the outcome of the same. However, in future, I may take investment decision through Tarrakki platform which may or may not be in conformity with my risk profile. I further acknowledge that the risk associated with the investment decision taken by me is my sole risk and to be borne entirely by me. Investment adviser is not responsible for the same."
+                    android:text="@string/i_confirm_that_i_have_conducted_my_risk_profiling"
                     android:textColor="@color/black" />
 
             </LinearLayout>
@@ -64,17 +63,16 @@
             <Button
                 android:id="@+id/btnAgree"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_16"
                 android:background="@drawable/shape_btn_idle_bg"
                 android:fontFamily="@font/lato_semibold"
                 android:gravity="center"
                 android:paddingStart="20dp"
-                android:layout_marginTop="@dimen/space_16"
                 android:paddingEnd="24dp"
-                android:text="Agree"
+                android:text="@string/agree"
                 android:textAllCaps="false"
-                android:textColor="@color/white"
-                />
+                android:textColor="@color/white" />
 
         </LinearLayout>
 
